fixed header and footer spacing

--- a/banner.css
+++ b/banner.css
@@ -55,9 +55,9 @@ a:hover{
     header {
     position: relative;
     padding: 0 6rem;
-    top:-178px;
+    top:-130px;
    }
-   
+
    .navbar {
     width: 100%;
     height: 60px;
@@ -68,23 +68,23 @@ a:hover{
     position: relative;
     top: 50px;
    }
-   
+
    .navbar .logo img {
     position: relative;
    }
-   
+
    .navbar .logo .leaf {
     width: 3.964rem;
     height: 6.016rem;
    }
-   
+
    .navbar .links {
     display: flex;
     gap: 5rem;
     position: relative;
     font-size: 1.5rem;
    }
-   
+
    .navbar .toggle_btn {
     cursor: pointer;
     display: none;
@@ -92,7 +92,7 @@ a:hover{
    .toggle_btn {
     position: relative;
    }
-   
+
    .action_btn {
     background-color: #CAE4C5;
     padding: 0.7rem 2rem;
@@ -104,18 +104,18 @@ a:hover{
     cursor: pointer;
     transition: scale 0.2s ease;
    }
-   
+
    .action_btn:hover {
     background-color: transparent;
     border: 1px solid #1C3312;
     scale: 1.05;
    }
-   
+
    .action_btn:active {
     animation: dissolve 300ms ease-out;
     scale: 0.95;
    }
-   
+
    @media (max-width: 992px) {
     .navbar .links,
     .navbar .action_btn{
@@ -132,19 +132,19 @@ a:hover{
     }
 }
     @media (max-width: 576px) {
-    
+
         header {
             padding: 0 2rem;
             backdrop-filter: blur(30px);
             -webkit-backdrop-filter: blur(30px);
         }
-        
+
         .dropdown_menu {
             left: 2rem;
             width: calc(100% - 4rem);
             top: 120px;
         }
-        
+
         .navbar .logo .leaf {
             width: 3rem;
             height: 4.5rem;
